Aula 3.5: layouts do JavaFX - VBox

--- a/tw-agenda-fx/src/br/com/treinaweb/agenda/fx/Main.fxml
+++ b/tw-agenda-fx/src/br/com/treinaweb/agenda/fx/Main.fxml
@@ -21,7 +21,14 @@
 		<Label BorderPane.alignment="CENTER_RIGHT" text="Região do rodapé"></Label>
 	</bottom>
 	<left>
-		<Label BorderPane.alignment="CENTER" text="Região da esquerda"></Label>
+		<VBox>
+			<children>
+				<Button text="Menu 1"></Button>
+				<Button text="Menu 2"></Button>
+				<Label text="Isso é um label"></Label>
+				<Button text="Menu 3"></Button>
+			</children>
+		</VBox>
 	</left>
 	<right>
 		<Label BorderPane.alignment="CENTER" text="Região da direita"></Label>
