--- a/tw-agenda-fx/src/br/com/treinaweb/agenda/fx/Main.fxml
+++ b/tw-agenda-fx/src/br/com/treinaweb/agenda/fx/Main.fxml
@@ -7,8 +7,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.shape.*?>
 
-
-<VBox maxHeight="420.0" maxWidth="600.0" minHeight="420.0" minWidth="600.0" prefHeight="420.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<VBox maxHeight="420.0" maxWidth="600.0" minHeight="420.0" minWidth="600.0" prefHeight="420.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.com.treinaweb.agenda.fx.MainController">
    <children>
       <Pane prefHeight="41.0" prefWidth="600.0" style="-fx-background-color: #bbb;">
          <children>
@@ -21,16 +20,16 @@
       </Pane>
       <Pane prefHeight="220.0" prefWidth="600.0" style="-fx-background-color: #eeeeee;">
          <children>
-            <TableView layoutX="8.0" layoutY="8.0" prefHeight="173.0" prefWidth="583.0">
+            <TableView fx:id="tabelaContatos" layoutX="8.0" layoutY="8.0" prefHeight="173.0" prefWidth="583.0">
               <columns>
                 <TableColumn editable="false" prefWidth="263.0" text="Nome" />
                 <TableColumn editable="false" minWidth="9.0" prefWidth="127.0" text="Idade" />
                   <TableColumn editable="false" prefWidth="185.0" text="Telefone" />
               </columns>
             </TableView>
-            <Button layoutX="8.0" layoutY="186.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="152.0" text="Incluir" />
-            <Button layoutX="168.0" layoutY="186.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="152.0" text="Alterar" />
-            <Button layoutX="327.0" layoutY="186.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="152.0" text="Excluir" />
+            <Button fx:id="botaoInserir" layoutX="8.0" layoutY="186.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="152.0" text="Incluir" />
+            <Button fx:id="botaoAlterar" layoutX="168.0" layoutY="186.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="152.0" text="Alterar" />
+            <Button fx:id="botaoExcluir" layoutX="327.0" layoutY="186.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="152.0" text="Excluir" />
          </children>
       </Pane>
       <TitledPane collapsible="false" prefHeight="161.0" prefWidth="600.0" text="Informações de contato">
@@ -50,19 +49,19 @@
                   <Label text="Nome:" />
                   <Label text="Idade:" GridPane.columnIndex="1" />
                   <Label text="Telefone" GridPane.columnIndex="2" />
-                  <TextField GridPane.rowIndex="1">
+                  <TextField fx:id="txfNome" GridPane.rowIndex="1">
                      <GridPane.margin>
                         <Insets right="10.0" />
                      </GridPane.margin>
                   </TextField>
-                  <TextField GridPane.columnIndex="1" GridPane.rowIndex="1">
+                  <TextField fx:id="txfIdade" GridPane.columnIndex="1" GridPane.rowIndex="1">
                      <GridPane.margin>
                         <Insets right="10.0" />
                      </GridPane.margin>
                   </TextField>
-                  <TextField GridPane.columnIndex="2" GridPane.rowIndex="1" />
-                  <Button mnemonicParsing="false" prefHeight="27.0" prefWidth="146.0" text="Salvar" GridPane.columnIndex="2" GridPane.rowIndex="2" />
-                  <Button mnemonicParsing="false" prefHeight="27.0" prefWidth="146.0" text="Cancelar" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                  <TextField fx:id="txfTelefone" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+                  <Button fx:id="botaoSalvar" mnemonicParsing="false" prefHeight="27.0" prefWidth="146.0" text="Salvar" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+                  <Button fx:id="botaoCancelar" mnemonicParsing="false" prefHeight="27.0" prefWidth="146.0" text="Cancelar" GridPane.columnIndex="1" GridPane.rowIndex="2" />
                </children>
             </GridPane>
          </content>
