--- a/tw-agenda-fx/src/br/com/treinaweb/agenda/fx/Main.fxml
+++ b/tw-agenda-fx/src/br/com/treinaweb/agenda/fx/Main.fxml
@@ -43,7 +43,7 @@
 				</TableView>
 				<Button fx:id="botaoInserir" layoutX="8.0" layoutY="186.0" mnemonicParsing="false" onAction="#botaoInserir_Action" prefHeight="27.0" prefWidth="152.0" text="Incluir" />
 				<Button fx:id="botaoAlterar" layoutX="168.0" layoutY="186.0" mnemonicParsing="false" onAction="#botaoAlterar_Action" prefHeight="27.0" prefWidth="152.0" text="Alterar" />
-				<Button fx:id="botaoExcluir" layoutX="327.0" layoutY="186.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="152.0" text="Excluir" />
+				<Button fx:id="botaoExcluir" layoutX="327.0" layoutY="186.0" mnemonicParsing="false" onAction="#botaoExcluir_Action" prefHeight="27.0" prefWidth="152.0" text="Excluir" />
 			</children>
 		</Pane>
 		<TitledPane collapsible="false" prefHeight="161.0" prefWidth="600.0" text="Informações de contato">
